# vmod_cel

./: Cargo.toml  Makefile  README.md  VERSIONING.md  build.rs  deny.toml  vmod.version
.github/workflows/: ci.yml  release.yml
docs/: VCL_COOKBOOK.md
examples/: README.md  basic_rules.json  basic_rules.yaml  complex_rules.yaml  example.vcl  medium_rules.yaml
src/: bundle.rs  cel_engine.rs  cel_functions.rs  lib.rs  loader.rs  panic_safety.rs  phase5_tests.rs  policy_engine.rs  request_attrs.rs  safety_limits.rs  workspace.rs  workspace_tests.rs
tests/: bundle_example.yaml  bundle_malformed.yaml  eval_multiple.vtc  lifecycle.vtc  phase5_features.vtc  stress.vtc  test_bundle_loading.rs  test_bundle_reload.vtc
tests/load/: load_test.vtc  memory_leak_test.vtc
